Rewrite `Resource` to `Node`
This _huge_ patch rewrites the `Resource` stuff to become regular
`Node`'s with `NodeType.RESOURCE`. This should simplify things a bit.